Update to html file

--- a/SDI Project 4/sdi-project4.html
+++ b/SDI Project 4/sdi-project4.html
@@ -11,7 +11,7 @@
     <h2>Project 4</h2>
 </header>
 <article>
-<p>I am </p>
+<p> This is Project 4 and I am excited to try an tackle these logic problems. I am excite because It will be more math like and less develop my own story. I don't care for writing stories because I see too many possibilities and it is hard for me to realize my story at this level of code experience.</p> 
 <p></p>
 <p></p>
 </article>
